# FreeAIAssistRepo

./: README.md
FreeAIAssist/: .gitignore  build.gradle  libsherpa_jni.dylib  libwhisper_jni.dylib  settings.gradle
FreeAIAssist/gradle/wrapper/: gradle-wrapper.properties
FreeAIAssist/src/main/java/com/free/aiassist/: AIAssist.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/constant/: Language.java  PCMFormat.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/sherpa/: SherpaJNI.java  SttSherpaEngine.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/stt/engine/: SttByteArrayEngine.java  SttConfig.java  SttDefaultEngine.java  SttEngine.java  SttEngineBase.java  SttNativeEngine.java  SttPacket.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/stt/io/: SttBuffer.java  SttByteBuffer.java  SttException.java  SttMedia.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/stt/io/nio/: SttNioHandler.java  SttNioInput.java  SttNioOutput.java  SttNioServer.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/stt/io/worker/: SttInput.java  SttOutput.java  SttProcessor.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/stt/media/: SttFileMedia.java  SttRecordMedia.java  SttStreamMedia.java
FreeAIAssist/src/main/java/com/free/aiassist/asr/whisper/: SttWhisperEngine.java  WhisperJNI.java
FreeAIAssist/src/main/java/com/free/aiassist/nlu/: NluTextProcessor.java
FreeAIAssist/src/main/java/com/free/aiassist/nlu/api/: NluHandler.java  NluHandlerBase.java  NluIntent.java  NluIntentAndSlots.java  NluProcessor.java  NluRequest.java  NluSlots.java  NluSlotsResolver.java
FreeAIAssist/src/main/java/com/free/aiassist/nlu/jointbert/: JointBertEnWordModifier.java  JointBertIntent.java  JointBertIntentParser.java  JointBertIntentQueries.java  JointBertSlotsParser.java
FreeAIAssist/src/main/java/com/free/aiassist/nlu/jointbert/slots/: LaunchSlotsResolver.java  MovieSlotsResolver.java  MusicSlotsResolver.java  NluSlotsResolverBase.java  WeatherSlotsResolver.java
FreeAIAssist/src/main/java/com/free/aiassist/nlu/jointbert/slots/bean/: LaunchSlots.java  MovieSlots.java  MusicSlots.java  WeatherSlots.java
FreeAIAssist/src/main/java/com/free/aiassist/test/: AsrApplication.java  AsrNIOClient.java  NluApplication.java
FreeAIAssist/src/main/resources/: logback.xml
SherpaNative/: CMakeLists.txt  com_free_aiassist_asr_sherpa_SherpaJNI.h  sherpa_jni.cpp
WhisperNative/: CMakeLists.txt
WhisperNative/lib/: libwhisper.dylib
WhisperNative/src/: com_free_aiassist_asr_whisper_WhisperJNI.h  whisper_jni.cpp  whisper_lite.cpp  whisper_lite.h
